--- a/kongGUI/src/app/pages/umaScript/umaScript.modal.html
+++ b/kongGUI/src/app/pages/umaScript/umaScript.modal.html
@@ -99,7 +99,8 @@
       </button>
       <button type="submit" class="btn btn-primary" ng-click="$ctrl.manageScript($ctrl.ScriptForm.$valid)">
         Save
-      </button>
+      </button> |
+      <button type="button" class="btn btn-default" ng-click="$dismiss()">Close</button>
     </div>
     <!--<div class="modal-footer">-->
     <!--<button type="button" class="btn btn-default" ng-click="$dismiss()">Close</button>-->
