Added authentication and solved designed issue

--- a/kongGUI/src/sass/app/_form.scss
+++ b/kongGUI/src/sass/app/_form.scss
@@ -88,79 +88,6 @@ textarea.form-control {
   }
 }
 
-@mixin setSwitcherColor($color) {
-  border: solid 1px $color;
-  .handle.handle-on {
-    background-color: $color;
-  }
-}
-
-.switcher-container {
-  margin-right: 10px;
-  font-weight: normal;
-  input {
-    display: none;
-  }
-  .switcher {
-    &.primary {
-      @include setSwitcherColor($primary);
-    }
-    &.success {
-      @include setSwitcherColor($success);
-    }
-    &.warning {
-      @include setSwitcherColor($warning);
-    }
-    &.danger {
-      @include setSwitcherColor($danger);
-    }
-    &.info {
-      @include setSwitcherColor($primary-light);
-    }
-    position: relative;
-    display: inline-block;
-    width: 84px;
-    overflow: hidden;
-    border-radius: 6px;
-    box-sizing: border-box;
-
-    /* this fixes the overflow:hidden in Chrome */
-    -webkit-transform: translateZ(0);
-    /* Hide default HTML checkbox */
-    input {
-      display: none;
-    }
-    .handle-container {
-      position: relative;
-      width: 126px;
-      cursor: pointer;
-      transform: translate3d(-42px, 0, 0);
-      transition: transform .2s linear;
-      .handle {
-        width: 42px;
-        float: left;
-        line-height: 28px;
-        height: 28px;
-        font-size: 12px;
-        text-align: center;
-        color: white;
-        &.handle-off {
-          background: $border;
-          color: black;
-        }
-      }
-    }
-  }
-  input:checked + .switcher {
-    border: solid 1px $border;
-    .handle-container {
-      transform: translate3d(0, 0, 0);
-    }
-  }
-
-}
-
-
 .switch-container {
   display: inline-block;
   &.primary {
@@ -248,7 +175,6 @@ textarea.form-control {
 
 .input-group {
   width: 100%;
-  margin-bottom: 15px;
   & > span {
     border-radius: 0;
   }
@@ -390,35 +316,35 @@ label.custom-input-danger {
 
 @mixin validationState($color, $focusColor) {
   .control-label {
-    color: $default-text;
+    //color: $default-text !important;
   }
   .form-control {
-    border: 1px solid $color;
+    border: 1px solid $color !important;
     &:focus {
       box-shadow: none;
-      border-color: $focusColor;
+      border-color: $focusColor !important;
     }
   }
 
   label.custom-checkbox {
-    color: $color;
+    color: $color !important;
     & > span {
       &:before {
-        color: $color;
+        color: $color !important;
       }
       &:hover {
         &:before {
-          border-color: $color;
+          border-color: $color !important;
         }
       }
     }
   }
   .form-control-feedback {
-    color: $color;
+    color: $color !important;
   }
   .input-group-addon {
-    background-color: $color;
-    color: $label-text;
+    background-color: $color !important;
+    color: $label-text !important;
   }
 }
 
@@ -443,14 +369,6 @@ label.custom-input-danger {
   .btn-default {
     &:focus {
       color: $default-text;
-    }
-  }
-  > .dropdown-toggle {
-    &.btn-primary, &.btn-warning, &.btn-danger, &.btn-success, &.btn-inverse, &.btn-info {
-      color: #fff;
-      &:hover, &:focus {
-        color: #fff;
-      }
     }
   }
 }
@@ -584,12 +502,6 @@ label.custom-input-danger {
   }
 }
 
-.ui-select-multiple.ui-select-bootstrap {
-
-  min-height: 34px;
-  padding: 4px 3px 0 12px;
-}
-
 .progress {
   background: $progress-background;
 }
@@ -643,4 +555,3 @@ label.custom-input-danger {
 .sub-little-text {
   font-size: 12px;
 }
-
