--- a/kongGUI/src/sass/app/_profile.scss
+++ b/kongGUI/src/sass/app/_profile.scss
@@ -148,7 +148,7 @@ a.sn-link {
     width: auto;
     font-size: 17px;
     margin-right: 8px;
-    background-color: rgba(0,0,0,.15);
+    background-color: rgba(0, 0, 0, .15);
     color: $default-text;
   }
   span {
@@ -226,7 +226,7 @@ a.sn-link {
       font-size: 14px;
       font-weight: $font-light;
     }
-    input{
+    input {
       font-weight: $font-light;
     }
   }
