--- a/kongGUI/src/sass/theme/_layout.scss
+++ b/kongGUI/src/sass/theme/_layout.scss
@@ -1,6 +1,6 @@
 $left-space: 180px;
 
-@include scrollbars(.5em, #d9d9d9, rgba(0,0,0,0));
+@include scrollbars(.5em, #d9d9d9, rgba(0, 0, 0, 0));
 
 html {
   position: relative;
@@ -21,9 +21,9 @@ body {
   }
 }
 
-body.mobile{
+body.mobile {
   background: none;
-  .body-bg{
+  .body-bg {
     display: block;
     position: fixed;
     top: 0;
@@ -33,18 +33,17 @@ body.mobile{
     background-attachment: inherit;
     background-color: $body-bg;
   }
-  &.blur-theme .body-bg{
+  &.blur-theme .body-bg {
     @include main-background();
   }
 }
 
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
-{
-  html{
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  html {
     overflow: hidden;
     height: 100%;
   }
-  body{
+  body {
     overflow: auto;
     height: 100%;
   }
@@ -55,9 +54,10 @@ a {
   outline: 0 !important;
 }
 
-.body-bg{
+.body-bg {
   display: none;
 }
+
 .al-header {
   display: block;
   height: 49px;
@@ -213,9 +213,9 @@ a {
 }
 
 .full-invisible {
-  visibility: hidden!important;
+  visibility: hidden !important;
   * {
-    visibility: hidden!important;
+    visibility: hidden !important;
   }
 }
 
