--- a/kongGUI/src/sass/theme/dashboard/_trafficChart.scss
+++ b/kongGUI/src/sass/theme/dashboard/_trafficChart.scss
@@ -4,13 +4,13 @@
 }
 
 .channels-block.transparent {
-  .traffic-chart canvas{
-    border: 10px solid rgba(0,0,0,0.35);
+  .traffic-chart canvas {
+    border: 10px solid rgba(0, 0, 0, 0.35);
     box-shadow: 0 0 5px 0 rgb(0, 0, 0) inset;
     border-radius: 150px;
   }
   .chart-bg {
-    background-color: rgba(0,0,0,0.35);
+    background-color: rgba(0, 0, 0, 0.35);
   }
 }
 
@@ -30,6 +30,7 @@
   margin-left: 70px;
   margin-top: -20px;
 }
+
 .small-container {
   .channels-info {
     display: none;
@@ -42,7 +43,7 @@
     font-size: 18px;
     opacity: 0.9;
   }
-  .channel-number{
+  .channel-number {
     display: inline-block;
     float: right;
   }
@@ -119,17 +120,17 @@
   margin-bottom: 0;
   background-color: $progress-background;
   box-shadow: none;
-  .progress-bar{
+  .progress-bar {
     height: 4px;
     background-color: $progress-default;
     box-shadow: none;
   }
 }
 
-.legend-color{
+.legend-color {
   width: 30px;
   height: 30px;
-  box-shadow:0 2px 2px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);
   position: relative;
   top: 27px;
   border-radius: 15px;
@@ -137,44 +138,44 @@
 }
 
 @media (max-width: $resM) {
-  div.channels-info{
+  div.channels-info {
     display: block;
     width: calc(100% - 88px);
     margin-top: -65px;
     margin-bottom: 10px;
   }
-  .panel.medium-panel.traffic-panel{
+  .panel.medium-panel.traffic-panel {
     height: auto;
   }
-  .traffic-chart{
+  .traffic-chart {
     position: inherit;
     float: none;
     margin: 0 auto;
   }
-  .chart-bg{
+  .chart-bg {
     left: calc(50% - 90px);
   }
 }
 
-@media (max-width: 1465px) and (min-width: 1199px){
-  .channels-info{
+@media (max-width: 1465px) and (min-width: 1199px) {
+  .channels-info {
     display: none;
   }
-  .traffic-chart{
+  .traffic-chart {
     position: inherit;
     float: none;
     margin: 0 auto;
   }
-  .chart-bg{
+  .chart-bg {
     left: calc(50% - 90px);
   }
 }
 
-@media (max-width: 380px){
-  .traffic-chart{
+@media (max-width: 380px) {
+  .traffic-chart {
     width: 240px;
   }
-  .canvas-holder{
+  .canvas-holder {
     width: 240px;
     height: 240px;
   }
@@ -182,7 +183,8 @@
     top: 30px;
   }
 }
-@media (max-width: 320px){
+
+@media (max-width: 320px) {
   .chart-bg {
     left: 50px;
     top: 50px;
