--- a/kongGUI/src/sass/theme/conf/_auth.scss
+++ b/kongGUI/src/sass/theme/conf/_auth.scss
@@ -1,30 +1,8 @@
-@import "common.scss";
-@import "theme/_socicon.scss";
-@import "theme/_layout.scss";
-@import 'theme/buttons.scss';
-@import 'app/form.scss';
-
-html {
-  min-height: 520px;
-  height: 100%;
-}
-
-body {
-  @include main-background();
-  height: 100%;
-}
-
 $text-color: #ffffff;
 
-.form-control, .form-control:focus {
-  @include placeholderStyle($text-color, 0.9);
-  background-color: rgba(0, 0, 0, .4);
-  border-radius: 5px;
-  color: $text-color;
-}
-
-.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
-  @include placeholderStyle($text-color, 0.6);
+body.auth {
+  @include main-background();
+  height: 100%;
 }
 
 .auth-main {
@@ -66,6 +44,17 @@ $text-color: #ffffff;
 
   .form-group {
     margin-bottom: 12px;
+  }
+
+  .form-control, .form-control:focus {
+    @include placeholderStyle($text-color, 0.9);
+    background-color: rgba(0, 0, 0, .4);
+    border-radius: 5px;
+    color: $text-color;
+  }
+
+  .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+    @include placeholderStyle($text-color, 0.6);
   }
 }
 
