--- a/kongGUI/src/app/pages/umaScript/scope.modal.html
+++ b/kongGUI/src/app/pages/umaScript/scope.modal.html
@@ -22,7 +22,7 @@
     <div class="modal-footer">
       <div class="form-group">
         <div class="col-sm-offset-1 col-sm-10">
-          <button type="submit" class="btn btn-primary" ng-click="$ctrl.addScope()">Add
+          <button type="submit" class="btn btn-primary" ng-click="$ctrl.addScope()">Save
           </button>
         </div>
       </div>
