--- a/kongGUI/src/app/pages/umaScript/umaScript.modal.html
+++ b/kongGUI/src/app/pages/umaScript/umaScript.modal.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="col-md-2">
-          <button type="button" class="btn btn-info btn-icon" ng-click="$ctrl.model.keyValues.splice($index,1)">
+          <button type="button" class="btn btn-danger btn-icon" ng-click="$ctrl.model.keyValues.splice($index,1)">
             <i class="ion-android-close"></i>
           </button>
         </div>
