--- a/kongGUI/src/app/pages/umaRs/umaRs.html
+++ b/kongGUI/src/app/pages/umaRs/umaRs.html
@@ -30,17 +30,6 @@
                 <span class="help-block error-block basic-block">This field is required!</span>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="form-group has-feedback"
-                   ng-class="{'has-error': $ctrl.PluginForm.oxd_host.$invalid && ($ctrl.PluginForm.oxd_host.$dirty || $ctrl.PluginForm.$submitted)}">
-                <label class="control-label" for="oxd_host"><span class="text text-danger">*</span> OXD Web URL</label>
-                <input type="text" class="form-control" id="oxd_host" name="oxd_host"
-                       title="Please enter the oxd host"
-                       placeholder="Please enter the oxd host" ng-model="$ctrl.modelPlugin.config.oxd_host"
-                       ng-required="true"/>
-                <span class="help-block error-block basic-block">This field is required!</span>
-              </div>
-            </div>
             <div class="col-md-12">
               <div class="form-group has-feedback">
                 <label for="api_id">--------------- Protection Document ---------------</label>
@@ -73,7 +62,12 @@
                              ng-class="{'has-error': $ctrl.PluginForm.httpMethods.$invalid && ($ctrl.PluginForm.httpMethods.$dirty || $ctrl.PluginForm.$submitted)}">
                           <tags-input ng-model="cond.httpMethods"
                                       id="httpMethods{{$parent.$index}}{{$index}}"
-                                      placeholder="Please enter the http Methods"></tags-input>
+                                      add-from-autocomplete-only="true"
+                                      placeholder="Please enter the http Methods">
+                            <auto-complete source="$ctrl.loadMethods($query)"
+                                           min-length="0"
+                                           debounce-delay="0"></auto-complete>
+                          </tags-input>
                           <span class="help-block error-block basic-block">This field is required!</span>
                         </div>
                       </div>
@@ -100,7 +94,7 @@
                         <div class="form-group has-feedback">
                           <tags-input ng-model="cond.ticketScopes"
                                       id="ticketScopes{{$parent.$index}}{{$index}}"
-                                      placeholder="Please enter the ticket scopes"></tags-input>
+                                      placeholder="Please enter ticket scopes"></tags-input>
                           <span class="help-block error-block basic-block">This field is required!</span>
                         </div>
                       </div>
