--- a/kongGUI/src/app/pages/home/home.html
+++ b/kongGUI/src/app/pages/home/home.html
@@ -4,6 +4,6 @@
   </div>
   <div class="panel-body">
     <h4>1. Registered your <a href ui-sref="api">resources</a></h4>
-    <h4>2. Configure resources with plugin i:e <a href ui-sref="openIDConnectRp">Kong OpenID</a> and <a href ui-sref="umaRs">Kong UMA RS</a></h4>
+    <h4>2. Configure resources with plugin <!-- i:e <a href ui-sref="openIDConnectRp">Kong OpenID</a> and --> <a href ui-sref="umaRs">Kong UMA RS</a></h4>
   </div>
 </div>
