Added logout feature

--- a/kongGUI/src/app/theme/components/pageTop/pageTop.html
+++ b/kongGUI/src/app/theme/components/pageTop/pageTop.html
@@ -11,7 +11,7 @@
         <li><i class="dropdown-arr"></i></li>
         <li><a href="#/profile"><i class="fa fa-user"></i>Profile</a></li>
         <li><a href><i class="fa fa-cog"></i>Settings</a></li>
-        <li><a href class="signout"><i class="fa fa-power-off"></i>Sign out</a></li>
+        <li><a href ng-click="$ctrl.logout()" class="signout"><i class="fa fa-power-off"></i>Sign out</a></li>
       </ul>
     </div>
   </div>
