Changed flow for add resources

--- a/kongGUI/src/app/pages/api/api.manage.modal.html
+++ b/kongGUI/src/app/pages/api/api.manage.modal.html
@@ -1,10 +1,7 @@
 <div class="modal-content">
   <form name="$ctrl.APIForm" novalidate>
     <div class="modal-header">
-      <button type="button" class="close" ng-click="$dismiss()" aria-label="Close">
-        <em class="ion-ios-close-empty sn-link-close"></em>
-      </button>
-      <h4 class="modal-title" id="createProviderLabel">Manage API</h4>
+      <h4 class="modal-title" id="createProviderLabel">Manage Resource</h4>
     </div>
     <div class="modal-body">
       <div class="row">
@@ -40,10 +37,10 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" ng-click="$dismiss()">Close</button>
       <button type="submit" class="btn btn-primary" ng-click="$ctrl.pushAPI($ctrl.APIForm.$valid)">
-        Save
+        {{!!$ctrl.modalAPI.id? 'Update': 'Save' }}
       </button>
+      <a href ui-sref="api" class="btn btn-default">Cancel</a>
     </div>
   </form>
 </div>
