--- a/oxd-kong/assets/js/app/apis/views/apis.html
+++ b/oxd-kong/assets/js/app/apis/views/apis.html
@@ -43,8 +43,6 @@
         <tr>
           <th width="1" ng-if="user.hasPermission($state.name.split('.')[0],'edit')"></th>
           <th width="1" ng-if="user.hasPermission($state.name.split('.')[0],'edit')"></th>
-          <!--<th width="1"></th>-->
-          <!--<th width="1"></th>-->
           <th width="{{item.width}}" class="text-nowrap"
               data-ng-repeat="item in titleItems | filter:titleFilter">
             <a data-ng-show="item.column"
@@ -59,38 +57,25 @@
                data-ng-show="sort.column == item.column"
                data-ng-class="{'mdi-chevron-down': !sort.direction, 'mdi-chevron-up': sort.direction}"></i>
           </th>
-          <th width="1" ng-if="user.hasPermission($state.name.split('.')[0],'delete')"></th>
+          <th width="1"></th>
+          <th width="1"></th>
         </tr>
         <tr
           dir-paginate="api in items.data | orderBy:sort.column:sort.direction | filter : filters.searchWord | itemsPerPage: itemsPerPage as filteredItems">
           <td ng-if="user.hasPermission($state.name.split('.')[0],'edit')">
-
-            <i
-              uib-tooltip="Strip {{Gateway.version.indexOf('0.9.') > -1 ? 'Request Path' : 'Uri'}}"
-              ng-click="toggleStripRequestPathOrUri(api)"
-              data-ng-class="{'text-primary' : isRequestPathOrUriStripped(api),'text-muted' : !isRequestPathOrUriStripped(api)}"
-              class="mdi mdi-link-off clickable">
+            <i uib-tooltip="Strip {{Gateway.version.indexOf('0.9.') > -1 ? 'Request Path' : 'Uri'}}"
+               ng-click="toggleStripRequestPathOrUri(api)"
+               data-ng-class="{'text-primary' : isRequestPathOrUriStripped(api),'text-muted' : !isRequestPathOrUriStripped(api)}"
+               class="mdi mdi-link-off clickable">
             </i>
           </td>
           <td ng-if="user.hasPermission($state.name.split('.')[0],'edit')">
-            <i
-              uib-tooltip="Preserve Host"
-              ng-click="api.preserve_host=!api.preserve_host;updateApi(api.id,{preserve_host : api.preserve_host})"
-              class="mdi clickable"
-              ng-class="api.preserve_host ? 'mdi-cloud-outline text-primary' : 'mdi-cloud-off-outline text-muted'">
+            <i uib-tooltip="Preserve Host"
+               ng-click="api.preserve_host=!api.preserve_host;updateApi(api.id,{preserve_host : api.preserve_host})"
+               class="mdi clickable"
+               ng-class="api.preserve_host ? 'mdi-cloud-outline text-primary' : 'mdi-cloud-off-outline text-muted'">
             </i>
           </td>
-          <!--<td>-->
-            <!--<i-->
-              <!--ng-if="api.health_checks && api.health_checks.active"-->
-              <!--class="mdi"-->
-              <!--uib-tooltip="{{api.health_checks.data ? ( api.health_checks.data.isHealthy ? 'Healthy' : 'Down or unresponsive' ) : 'N/A'}}"-->
-              <!--data-ng-class="{'mdi-loading mdi-spin': !api.health_checks.data,'mdi-heart-broken text-danger': api.health_checks.data && !api.health_checks.data.isHealthy,'mdi-heart-pulse text-success': api.health_checks.data && api.health_checks.data.isHealthy}"></i>-->
-            <!--<i style="opacity: .5" uib-tooltip="HC disabled" ng-if="!api.health_checks || !api.health_checks.active"-->
-               <!--class="mdi mdi-heart-outline"></i></td>-->
-          <!--<td>-->
-            <!--<raw-view data-item="api"></raw-view>-->
-          <!--</td>-->
           <td>
             <strong>
               <a class="clickable"
@@ -99,12 +84,10 @@
           </td>
           <td>{{ api.upstream_url || "-" }}</td>
           <td>{{api.created_at | date : format : timezone}}</td>
-          <!--<td>-->
-          <!--<a ui-sref="apis.edit({ api_id: api.id })" class="btn btn-default btn-link">-->
-
-          <!--edit-->
-          <!--</a>-->
-          <!--</td>-->
+          <td>
+            <a ui-sref="apis.edit({ api_id: api.id })" class="btn btn-primary btn-link"><i class="mdi mdi-settings"></i>
+              Manage</a>
+          </td>
           <td ng-if="user.hasPermission($state.name.split('.')[0],'delete')">
             <button type="button" ng-click="deleteItem($index,api)" class="btn btn-danger btn-link">
               <i class="mdi mdi-delete"></i>
